module(name = "mutants", version = "0.1")

bazel_dep(name = "googletest", version = "1.12.1")
bazel_dep(name = "abseil-cpp", version = "20211102.0")
bazel_dep(name = "rules_cc", version = "0.0.4")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "protobuf", version = "3.19.0")

