cc_binary(
    name = "mutants_main",
    srcs = ["mutants_main.cc"],
    deps = [
        ":bazel",
        ":executor",
        ":mutator_java",
        ":sandbox",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_library(
    name = "bazel",
    srcs = ["bazel.cc"],
    hdrs = ["bazel.h"],
    deps = [
        "//third_party/bazel:build_cc_proto",
        "//third_party/subprocess",
        "@protobuf//:protobuf",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "executor",
    srcs = ["executor.cc"],
    hdrs = ["executor.h"],
    deps = [
        ":changes",
        ":mutator",
        ":mutator_java",
        ":sandbox",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "changes",
    srcs = ["changes.cc"],
    hdrs = ["changes.h"],
    deps = [
        "//third_party/diff_match_patch:diff",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_test(
    name = "changes_test",
    srcs = ["changes_test.cc"],
    deps = [
        ":changes",
        "//third_party/random_string",
        "//third_party/tensorflow:status_matcher",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_library(
    name = "sandbox",
    srcs = ["sandbox.cc"],
    hdrs = ["sandbox.h"],
    deps = [
        ":bazel",
        ":changes",
        "//third_party/random_string",
        "@abseil-cpp//absl/status:statusor",
    ],
)

cc_binary(
    name = "sandbox_main",
    srcs = ["sandbox_main.cc"],
    deps = [
        ":bazel",
        ":sandbox",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_binary(
    name = "bazel_main",
    srcs = ["bazel_main.cc"],
    deps = [
        ":bazel",
        "@abseil-cpp//absl/flags:flag",
        "@abseil-cpp//absl/flags:parse",
    ],
)

cc_library(
    name = "mutator",
    hdrs = ["mutator.h"],
    deps = [
        "//third_party/diff_match_patch:diff",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "sandwitch",
    srcs = ["sandwich.cc"],
    hdrs = ["sandwich.h"],
    deps = [
        ":mutator",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "ts",
    srcs = ["ts.cc"],
    hdrs = ["ts.h"],
    deps = [
        ":mutator",
        "//third_party/tree_sitter",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_library(
    name = "mutator_java",
    srcs = ["mutator_java.cc"],
    hdrs = ["mutator_java.h"],
    deps = [
        ":mutator",
        ":sandwitch",
        ":ts",
        "//third_party/tree_sitter",
        "//third_party/tree_sitter/java",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "mutate_java_test",
    srcs = ["mutator_java_test.cc"],
    deps = [
        ":mutator",
        ":mutator_java",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
